Remove default play

--- a/templates/rezzed/slides.html
+++ b/templates/rezzed/slides.html
@@ -200,7 +200,7 @@
 
 	// testing
 	// scheduleIn('Friday', 0);
-	upNextIn('Friday', 0);
+	// upNextIn('Friday', 0);
 
 	// slides
 	function upNextIn(day, slot) {
