Add webkit prefix

--- a/templates/rezzed/slides.html
+++ b/templates/rezzed/slides.html
@@ -113,7 +113,7 @@
 			margin-bottom: 10px;
 		}
 		.schedule-item.small {
-			transform: scale(.65);
+			-webkit-transform: scale(.65);
 		}
 		.schedule-item.small .headings {
 			background: transparent;
