Alternative overlay style

--- a/templates/rezzed/slides.html
+++ b/templates/rezzed/slides.html
@@ -46,7 +46,7 @@
 			color: #ff57c0;
 			text-transform: uppercase;
 			letter-spacing: -5px;
-			margin: 30px 0px 0px;
+			margin: 0;
 			max-width: 600px;
 		}
 		h2, h4, h6 {
@@ -74,13 +74,18 @@
 		}
 		.corner ul {
 			position: absolute;
-			left: 277px; top: 50px;
+			left: 50px; top: 200px;
+		}
+		.corner h1 {
+			position: absolute;
+			left: 50px; top: 390px;
 		}
 		.corner h2 {
 			margin-bottom: 10px;
 		}
 		.logo {
-			width: 177px; height: 231px;
+			/*width: 177px; height: 231px;*/
+			width: 618px; height: 106px;
 		}
 		.schedule {
 			width: 1920px; height: 1080px;
@@ -232,7 +237,7 @@
 	</div>
 
 	<div class="corner">
-		<img class="logo" src="img/EGX_REZZED_WHITE.png" />
+		<img class="logo" src="img/EGX_REZZED_LS_WHITE.png" />
 		<ul>
 			<li><h2>#EGX @EGX</h2></li>
 			<li><h3>facebook.com/egx</h3></li>
@@ -263,7 +268,7 @@
 	var schedule_timer = null, schedule_hold = false;
 
 	// testing
-	// showOverlay('Up next');
+	showOverlay('Up next');
 	// upNext();
 	// upNextImageOut()
 	// schedule();
